Add a guides category and add guide for depositing ETH

--- a/docs/docs/getting-started.mdx
+++ b/docs/docs/getting-started.mdx
@@ -61,7 +61,7 @@ const walletClient = PufferClientHelpers.createWalletClient({
   chain: Chain.Holesky,
   provider: window.ethereum,
 });
-const pufferClient = new PufferClient(Chain.Holesky);
+const pufferClient = new PufferClient(Chain.Holesky, walletClient);
 // highlight-end
 ```
 
