--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -5,3 +5,6 @@ sidebar_position: 1
 # Puffer SDK
 
 SDK for interacting with the puffer smart contracts.
+
+- [Getting Started](./getting-started.mdx)
+- [Guides](./guides/index.mdx)
