Add contract handlers to main page

--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -8,3 +8,4 @@ SDK for interacting with the puffer smart contracts.
 
 - [Getting Started](./getting-started.mdx)
 - [Guides](./guides/index.mdx)
+- [Using Contract Handlers](./handlers/index.mdx)
