Add L1RewardManager and L2RewardManager to handlers docs

--- a/docs/docs/handlers/index.mdx
+++ b/docs/docs/handlers/index.mdx
@@ -22,6 +22,10 @@ We currently have the following handlers.
   For interacting with Puffer's `PufferL2Depositor` contract.
 - [PufferVaultHandler](../api/contracts/handlers/puffer-vault-handler.md)\
   For interacting with Puffer's `PufferVault` contract.
+- [L1RewardManagerHandler](../api/contracts/handlers/l1-reward-manager-handler.md)\
+  For interacting with Puffer's `L1RewardManager` contract.
+- [L2RewardManagerHandler](../api/contracts/handlers/l2-reward-manager-handler.md)\
+  For interacting with Puffer's `L2RewardManager` contract.
 
 More details about each handler can be found in their respective API documentation.
 
