--- a/docs/docs/handlers/index.mdx
+++ b/docs/docs/handlers/index.mdx
@@ -14,8 +14,6 @@ We currently have the following handlers.
   For interacting with the `ERC20Permit` contract for any supported token.
 - [PufLockerHandler](../api/contracts/handlers/puf-locker-handler.md)\
   For interacting with Puffer's `PufLocker` contract.
-- [PufTokenHandler](../api/contracts/handlers/puf-token-handler.md)\
-  For interacting with Puffer's `PufToken` contract for wrapped tokens.
 - [PufferDepositorHandler](../api/contracts/handlers/puffer-depositor-handler.md)\
   For interacting with Puffer's `PufferDepositor` contract.
 - [PufferL2DepositorHandler](../api/contracts/handlers/puffer-l2-depositor-handler.md)\
@@ -26,6 +24,14 @@ We currently have the following handlers.
   For interacting with Puffer's `L1RewardManager` contract.
 - [L2RewardManagerHandler](../api/contracts/handlers/l2-reward-manager-handler.md)\
   For interacting with Puffer's `L2RewardManager` contract.
+- [L2RewardManagerHandler](../api/contracts/handlers/l2-reward-manager-handler.md)\
+  For interacting with Puffer's `L2RewardManager` contract.
+- [NucleusBoringVaultHandler](../api/contracts/handlers/nucleus-boring-vault-handler.md)\
+  For interacting with Nucleus's `BoringVault` contract.
+- [NucleusTellerHandler](../api/contracts/handlers/nucleus-teller-handler.md)\
+  For interacting with Nucleus's `Teller` contract.
+- [NucleusAccountantHandler](../api/contracts/handlers/nucleus-accountant-handler.md)\
+  For interacting with Nucleus's `Accountant` contract.
 
 More details about each handler can be found in their respective API documentation.
 
