Guide for staking at Puffer

--- a/docs/docs/handlers/index.mdx
+++ b/docs/docs/handlers/index.mdx
@@ -32,6 +32,16 @@ We currently have the following handlers.
   For interacting with Nucleus's `Teller` contract.
 - [NucleusAccountantHandler](../api/contracts/handlers/nucleus-accountant-handler.md)\
   For interacting with Nucleus's `Accountant` contract.
+- [NucleusAtomicQueueHandler](../api/contracts/handlers/nucleus-atomic-queue-handler.md)\
+  For interacting with Nucleus's `AtomicQueue` contract.
+- [CarrotStakingHandler](../api/contracts/handlers/carrot-staking-handler.md)\
+  For interacting with Puffer's `CarrotStaker` contract.
+- [MtwCarrotHandler](../api/contracts/handlers/mtw-carrot-handler.md)\
+  For interacting with Merkl's Merkl Token Wrapper (mtw) CARROT contract.
+- [PufferWithdrawalManagerHandler](../api/contracts/handlers/puffer-withdrawal-manager-handler.md)\
+  For interacting with Puffer's `PufferWithdrawalManager` contract.
+- [DistributorHandler](../api/contracts/handlers/distributor-handler.md)\
+  For interacting with Merkl's `Distributor` contract.
 
 More details about each handler can be found in their respective API documentation.
 
